Bug 498924 - Haruna no longer blocks sleep while playing media
Summary: Haruna no longer blocks sleep while playing media
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.3.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-20 12:26 UTC by OIRNOIR
Modified: 2025-01-21 05:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description OIRNOIR 2025-01-20 12:26:31 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
Haruna no longer blocks sleep while playing media on version 1.3.0

STEPS TO REPRODUCE
1. Use haruna v1.3.0
2. Start playing media
3. Check the power management menu to see if sleep is blocked
4. (Optional) play the video until your computer automatically sleeps
5. Repeat for haruna v1.2 via dnf downgrade haruna

OBSERVED RESULT
Haruna does not block sleep on v1.3.0 and the computer sleeps while playing video if the user does not interact with their computer
This behavior is not present on v1.2

EXPECTED RESULT
Haruna blocks sleep while playing media

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Linux 6.12.9 Fedora 41
KDE Plasma Version: Plasma 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1

ADDITIONAL INFORMATION
Comment 1 george fb 2025-01-21 05:34:05 UTC
Git commit c608c99d6b97dac93ddbd3559d4fd9d5c1ad645c by George Florea Bănuș.
Committed on 21/01/2025 at 05:27.
Pushed by georgefb into branch 'master'.

mpvitem: initialize pause property to true

 - otherwise the value doesn't change when playback starts
   and screen inhibition (which is set when pause changes) is not enabled

M  +1    -0    src/mpv/mpvitem.cpp
M  +1    -1    src/mpv/mpvitem.h

https://invent.kde.org/multimedia/haruna/-/commit/c608c99d6b97dac93ddbd3559d4fd9d5c1ad645c