mpvitem: initialize pause property to true

- otherwise the value doesn't change when playback starts
   and screen inhibition (which is set when pause changes) is not enabled

BUG: 498924